# pick_place_moveit2

./: CMakeLists.txt  README.md  package.xml
config/: moveit_cpp.yaml  start_positions.yaml
launch/: pick_place_moveit2.launch.py
src/: pick_place_moveit2.cpp  pick_place_test.cpp
